bleach.fish/src/index.css
* {
  margin: 0;
  padding: 0;
  background-color: black;
}

html, body {
  height: 100%;  /* Take up full height */
  margin: 2em;
  overflow: hidden;
  background-color: black;
}

vert-center-wrapper {
  height: 100%;  /* Take up full height */
  margin: 0;  /* Remove extra margins */
  overflow: hidden;  /* Prevent scrolling */
  background-color: black;
  display: flex;
  justify-content: center;  /* Center content horizontally */
  align-items: center;  /* Center content vertically */
}

@font-face {
  font-family: 'LoveLetter';
  src: url('/fonts/LoveLetterTW.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'blockzone';
  src: url('/fonts/blockzone.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
}

.roboto {
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-style: normal;
}

p, a {
  line-height: 1em;

  white-space: pre;

}

.text-red {
  color: red;
}

.text-purple {
  color: purple;
}

.text-white {
  color: white;
}

.typewriter {
  font-family: "LoveLetter";
}

.h1 {
  font-size: 2.3em;
}

.h2 {
  font-size: 2em;
}

.p {
  font-size: 1.5em;
}

.postlink {
  line-height: 32px;
  display: block;
}

.meat a {
  display: block;
  line-height: 1em;

}

a:visited {
  color: white;
}

a:hover {
  color: gray;
  cursor: pointer;

}

a:active {
  color: white;
}

a {
  color: white;
}

.skin {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.cover {
  outline-style: solid;
  outline-color: purple;
  outline-offset: 3px;
  outline-width: 2px;
  width: 150px;
}

.cover:hover {
  outline-color: rgb(102, 0, 102);
  outline-offset: 2px;
  outline-width: 2px;
}

.back-button {
  color: white;
  font-size: 1.5em;
  position: fixed;
  bottom: 20px;
  left: 30px;
}

.chess {
  margin: 50px;
  width: 15em;
  image-rendering: pixelated;
}

.track-container {
  display: flex;
  align-items: center;
  flex-direction: row; /* On desktop, keep the items side by side */
}

.track-title {
  margin-left: 20px; /* Space between cover art and text */
}

.cover {
  width: 100px; /* Default width for desktop */
  outline-style: solid;
  outline-color: purple;
  outline-offset: 3px;
  outline-width: 2px;
}

.cover:hover {
  outline-color: rgb(102, 0, 102);
  outline-offset: 2px;
  outline-width: 2px;
}

/* Responsive Design */

@media (max-width: 668px) {
  .track-container {
    flex-direction: column; /* Stack elements vertically on mobile */
    align-items: center; /* Center the items */
  }

  .skin {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100dvh;  /* Fill the viewport height */
  }

  .cover {
    width: 40%;  /* Make the cover image 80% of the width */
    margin-bottom: 20px;  /* Add space below the image */
  }

  .track-title {
    margin-left: 0;
    text-align: center; /* Center the text on mobile */
  }
  
  .track-info {
    margin-top: 20px;
    text-align: center; /* Center the text on mobile */
  }

  .h2 {
    font-size: 1.5em; /* Adjust font size for smaller screens */
  }
}

@media (max-width: 450px) {
  .cover {
    width: 60%;  /* Make the cover image 80% of the width */
    margin-bottom: 20px;  /* Add space below the image */
  }
}

